@@ -213,16 +213,23 @@ class TemplatetagDatabaseTests(TwoPagesFixture, CMSTestCase):
             self.assertEqual(len(mail.outbox), 0)
 
     def test_get_page_by_untyped_arg_dict_fail_nodebug_do_email(self):
-        with self.settings(SEND_BROKEN_LINK_EMAILS=True, DEBUG=False,
-                           MANAGERS=[("Jenkins", "tests@django-cms.org")]):
+        with self.settings(
+            MIDDLEWARE=settings.MIDDLEWARE + ["django.middleware.common.BrokenLinkEmailsMiddleware"],
+            DEBUG=False,
+            MANAGERS=[("Jenkins", "tests@django-cms.org")]
+        ):
             request = self.get_request('/')
             page = _get_page_by_untyped_arg({'pk': 1003}, request, 1)
             self.assertEqual(page, None)
             self.assertEqual(len(mail.outbox), 1)
 
     def test_get_page_by_untyped_arg_dict_fail_nodebug_no_email(self):
-        with self.settings(SEND_BROKEN_LINK_EMAILS=False, DEBUG=False,
-                           MANAGERS=[("Jenkins", "tests@django-cms.org")]):
+        with self.settings(
+            MIDDLEWARE=[mw for mw in settings.MIDDLEWARE
+                        if mw != "django.middleware.common.BrokenLinkEmailsMiddleware"],
+            DEBUG=False,
+            MANAGERS=[("Jenkins", "tests@django-cms.org")]
+        ):
             request = self.get_request('/')
             page = _get_page_by_untyped_arg({'pk': 1003}, request, 1)
             self.assertEqual(page, None)
